--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -22,6 +22,15 @@ body {
   transition: 3s;
 
 }
+.fio{
+  display: flex;
+  position: relative;
+  bottom:10em;
+  right: 10em;
+  font-style: italic;
+  font-size: 5em;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 
 ul {
   list-style-type: none;
@@ -30,31 +39,16 @@ ul {
   background-size: 400% 400%;
   background-image: linear-gradient(-45deg, #ff5959, #ff4040, #ff0d6e, #ff8033,#d74177);
   animation: 12s myGradient infinite;
+  position: relative;
+  bottom:18em;
+  left: 15em;
   border-radius: 40px;
   box-shadow: 3px 3px 20px #ff3352;
   border-top-left-radius: 0px;
   border-bottom-right-radius: 0px;
 }
 
-@keyframes myGradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  
-  50%{
-    background-position: 100% 50%;
-  }
-  
-  100% {
-    background-position: 0% 50%;
-  }
-}
 
-.fa-search{
-  transition: 1s;
-  cursor: pointer;
-  margin-left: 30px;
-}
 
 .active {
   transition: 1s;
@@ -90,12 +84,7 @@ li a {
   left: 50%;
 }
 
-.fa-search:hover {
-  color: #fff;
-  animation: 1.5s myFlash linear infinite;
-  text-shadow: 2px 2px 30px #fff;
-  transition: 2s;
-}
+
 
 .active3:hover {
   color: #fff;
@@ -141,102 +130,6 @@ li a {
     text-shadow: 2px 2px 20px #fff;
   }
 }
-
-.line-w5 {
-  width: 5px;
-  height: 200px;
-  background: tomato;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 70%;
-  border-radius: 30px;
-  background-image: linear-gradient(-45deg, #ff408c, #ff4040, #6666ff);
-  background-size: 400% 400%;
-  animation: 13s myBackground infinite;
-  box-shadow: 2px 2px 10px #ff2e38;
-  transition: 3s;
-}
-
-@keyframes myBackground {
-  0% {
-    background-position: 0% 50%;
-    opacity: 0%;
-  }
-  
-  50% {
-    background-position: 100% 50%;
-  }
-  
-  100% {
-    background-position: 0% 50%;
-    opacity: 1;
-  }
-}
-
-
-@keyframes myLinear {
-  0%{
-    width: 50px;
-  }
-  
-  100% {
-    width: 250px;
-  }
-}
-
-.flash-GIF {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background: #ff5959;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 15%;
-  left: 10%;
-  box-shadow: 2px 2px 20px #d4267d;
-  animation: 1.6s myFlash linear infinite;
-}
-
-@keyframes myFlash{
-  0% {
-    opacity: 1;
-  }
-  
-  50%{
-    opacity: .1;
-  }
-  
-  100% {
-    opacity: 1;
-  }
-}
-
-nav {
-  transition: 3s;
-  animation: 3s myAnimation ease linear;
-}
-
-@keyframes myAnimation {
-  0% {
-    opacity: 0;
-  }
-  
-  100% {
-    opacity: 1;
-  }
-}
-@media(max-width: 767px) {
-  .text-content-fluid {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 60%;
-  }
-}
-
-
-
 
 
 
